--- a/_posts/2017-05-09-a-new-blog.md
+++ b/_posts/2017-05-09-a-new-blog.md
@@ -2,9 +2,9 @@
 layout: single
 title: A new blog is born
 date: 2017-05-09
-teaser: "/assets/img/Madrid Sun.jpg"
+teaser: "/assets/img/Madrid-Sun.jpg"
 header: 
-    image: "/assets/img/Madrid Sun.jpg"
+    image: "/assets/img/Madrid-Sun.jpg"
 category: travel
 author_profile: true
 read_time: true
