fixed photo display

--- a/_posts/2017-05-09-a-new-blog.md
+++ b/_posts/2017-05-09-a-new-blog.md
@@ -26,7 +26,8 @@ Welcome to my blog! In the coming months I'll be writing on a variety of topics 
 There are many opportunities for technology to disrupt the law. If we travelled back a hundred years and stepped into to hospital in 1917, it would look very different from today. We might convince a doctor to leave their operating room and return to the 21st century with us, but they would not longer be able to practice medicine. Advances in antibiotics, genomics, and stem-cell therapy are some of the technologies that have changed the delivery of health care.
 
 <img style="margin-left: -2em;" src="{{ site.url }}{{ site.baseurl }}/assets/img/LawyerJokes1900Closeup.jpg" alt="Lawyer joke from 1900">
-<small>A lawyer joke from 1900: "Take my card and call me" the lawyer tells man as he falls out of the carriage.</small>
+<div>
+<small>"Take my card and call me" the lawyer tells the man falling out of the carriage.</small></div>
 
 Instead, if we entered a court room in 1917 and convinced a lawyer to travel 100 years back with us, they'd quickly be able to represent clients. Compared to advances in medicine, not much has changed in the practice of law. Yes, our legal institutions have evolved, the law has advanced, legal research now involves searching databases instead of stacks of reporters, and lawyers today work in networked offices. But our time travelling lawyer would represent clients using similar arguments, gathered through the same methods of detailing facts and reading cases, and presented in a familiar court setting. These are all areas were technology can increase access to justice.
 
@@ -34,9 +35,9 @@ The technological revolution in law is just beginning. Machine learning technolo
 
 The substance of law is also changing as technologies create new social dynamics and legal issues. Legislation, case law, regulations, and our legal institutions are evolving to address these problems. Issues of privacy, ownership of data, and regulation of the internet are pressing topics that generate significant debate. Open access has become a popular tool to share knowledge while managing copyright issues. International treaty negotiations and kegislative review of key intellectual property legislation raise questions about how to facilitate innovation in Canada. 
 
-This is an exciting time to be working in technology and law. I invite you to follow my work here, on [twitter](https://twitter.com/baarbeh/) and [github](https://github.com/baarbeh). I welcome comments, which you can submit through this [interactive form](https://jbaarbe.typeform.com/to/BwFIyM).
+This is an exciting time to be working in technology and law. I invite you to follow and engage with me here, on [twitter](https://twitter.com/baarbeh/) and [github](https://github.com/baarbeh). I welcome comments, which you can submit through this [interactive form](https://jbaarbe.typeform.com/to/BwFIyM).
 
 <img style="margin-left: -2em;" src="{{ site.url }}{{ site.baseurl }}/assets/img/sunrise1.jpg" alt="The sun rising above Amboseli, Kenya">
-<small>The sun rising across the savannah in Amboseli, Kenya</small>
+<div><small>The sun rising across the savannah in Amboseli, Kenya</small></div>
 
 
